apps/target-tracking-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-tracking-service
  namespace: c4i
  labels:
    app: target-tracking-service
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target-tracking-service
  template:
    metadata:
      labels:
        app: target-tracking-service
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - kafka
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: target-tracking-service
          image: sm010422/target-tracking-service:cb6398e1ae2a821fa35030a0bbf1b359ed0c3d38
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
