apps/target-tracking-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: target-tracking-service
  namespace: c4i
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: target-tracking-service
                port:
                  number: 8080
